--- a/Schyntax.RedisLock/Schyntax.RedisLock.nuspec
+++ b/Schyntax.RedisLock/Schyntax.RedisLock.nuspec
@@ -12,5 +12,9 @@
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2015</copyright>
     <tags>Schedule Scheduler Task Runner</tags>
+    <dependencies>
+      <dependency id="StackExchange.Redis" version="1.0.450"/>
+      <dependency id="Schyntax" version="0.10.1"/>
+    </dependencies>
   </metadata>
 </package>
