--- a/Schyntax.RedisLock.Tests/Schyntax.RedisLock.Tests.csproj
+++ b/Schyntax.RedisLock.Tests/Schyntax.RedisLock.Tests.csproj
@@ -34,8 +34,8 @@
       <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Schyntax, Version=0.10.0.13, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Schyntax.0.10.1-unstable13\lib\net45\Schyntax.dll</HintPath>
+    <Reference Include="Schyntax, Version=0.10.1.14, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Schyntax.0.10.1\lib\net45\Schyntax.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="StackExchange.Redis, Version=1.0.316.0, Culture=neutral, processorArchitecture=MSIL">
