--- a/Schyntax.RedisLock.Tests/packages.config
+++ b/Schyntax.RedisLock.Tests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NUnit" version="2.6.4" targetFramework="net45" userInstalled="true" />
-  <package id="Schyntax" version="0.10.1-unstable13" targetFramework="net45" userInstalled="true" />
+  <package id="Schyntax" version="0.10.1" targetFramework="net45" userInstalled="true" />
   <package id="StackExchange.Redis" version="1.0.450" targetFramework="net45" userInstalled="true" />
 </packages>
