--- a/Schyntax.RedisLock/Schyntax.RedisLock.csproj
+++ b/Schyntax.RedisLock/Schyntax.RedisLock.csproj
@@ -30,8 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Schyntax, Version=0.10.2.17, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Schyntax.0.10.2\lib\net45\Schyntax.dll</HintPath>
+    <Reference Include="Schyntax, Version=0.10.2.22, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Schyntax.0.10.3-unstable22\lib\net45\Schyntax.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="StackExchange.Redis, Version=1.0.316.0, Culture=neutral, processorArchitecture=MSIL">
@@ -48,7 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RedisLockedSchtick.cs" />
+    <Compile Include="RedisSchtickWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
