--- a/Schyntax.RedisLock/packages.config
+++ b/Schyntax.RedisLock/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Schyntax" version="0.10.2" targetFramework="net45" userInstalled="true" />
+  <package id="Schyntax" version="0.10.3-unstable22" targetFramework="net45" userInstalled="true" />
   <package id="StackExchange.Redis" version="1.0.450" targetFramework="net45" userInstalled="true" />
 </packages>
