--- a/Schtick.Redis/Schtick.Redis.csproj
+++ b/Schtick.Redis/Schtick.Redis.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A7F32936-854D-4051-9C32-0F22E68E8B6F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Schyntax.RedisLock</RootNamespace>
-    <AssemblyName>Schyntax.RedisLock</AssemblyName>
+    <RootNamespace>Schyntax</RootNamespace>
+    <AssemblyName>Schtick.Redis</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Schyntax, Version=0.11.0.26, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Schyntax.0.11.0\lib\net45\Schyntax.dll</HintPath>
+    <Reference Include="Schtick, Version=1.0.0.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Schtick.1.0.0\lib\net45\Schtick.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Schyntax, Version=1.0.0.30, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Schyntax.1.0.0\lib\net45\Schyntax.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="StackExchange.Redis, Version=1.0.316.0, Culture=neutral, processorArchitecture=MSIL">
@@ -53,7 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="Schyntax.RedisLock.nuspec" />
+    <None Include="Schtick.Redis.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
