--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,9 +3,9 @@
 #---------------------------------#
 
 environment:
-  NUGET_RELEASE_VERSION: 0.11.0
-  NUGET_FILE: Schyntax.RedisLock\Schyntax.RedisLock.nuspec
-  ASSEMBLY_FILE: Schyntax.RedisLock\Properties\AssemblyInfo.cs
+  NUGET_RELEASE_VERSION: 0.9.0
+  NUGET_FILE: Schtick.Redis\Schtick.Redis.nuspec
+  ASSEMBLY_FILE: Schtick.Redis\Properties\AssemblyInfo.cs
 
 version: $(NUGET_RELEASE_VERSION).{build}
 
@@ -35,7 +35,7 @@ platform: Any CPU
 configuration: Release
 
 build:
-  project: Schyntax.RedisLock\Schyntax.RedisLock.csproj
+  project: Schtick.Redis\Schtick.Redis.csproj
   publish_nuget: true
   publish_nuget_symbols: true
   verbosity: normal
