--- a/Schtick.Redis.Tests/packages.config
+++ b/Schtick.Redis.Tests/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="2.6.4" targetFramework="net45" userInstalled="true" />
-  <package id="Schtick" version="1.0.1" targetFramework="net45" userInstalled="true" />
-  <package id="Schyntax" version="1.0.1" targetFramework="net45" userInstalled="true" />
-  <package id="StackExchange.Redis" version="1.0.450" targetFramework="net45" userInstalled="true" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="Schtick" version="1.0.5" targetFramework="net45" />
+  <package id="Schyntax" version="1.0.4" targetFramework="net45" />
+  <package id="StackExchange.Redis" version="1.0.450" targetFramework="net45" />
 </packages>
