--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,12 @@
 
 os: Visual Studio 2017
 
+install:
+  - cmd: >-
+      nuget install redis-64 -excludeversion
+      redis-64\tools\redis-server.exe --service-install
+      redis-64\tools\redis-server.exe --service-start
+
 #---------------------------------#
 #       build configuration       #
 #---------------------------------#
